; [metadata]
; name = pii_library
; version = 0.1
; description = A Django app to perform PII_Data security.
; long_description = file: README.rst
; author = Amith Kulkarni
; author_email = amith@rhythmflows.com
; classifiers =
;     Environment :: Web Environment
;     Framework :: Django
;     Framework :: Django :: 5.1
;     Intended Audience :: Developers
;     License :: OSI Approved :: BSD License
;     Operating System :: OS Independent
;     Programming Language :: Python
;     Programming Language :: Python :: 3
;     Programming Language :: Python :: 3.10
;     Programming Language :: Python :: 3.11
;     Programming Language :: Python :: 3.12
;     Topic :: Internet :: WWW/HTTP
;     Topic :: Internet :: WWW/HTTP :: Dynamic Content

; [options]
; include_package_data = true
; packages = find:
; python_requires = >=3.9.11
; install_requires =
;     Django >= 5.1

; [options.packages.find]
; where = pii_library